feat: log4j debug config